fix: elements should fit screen properly on mobile again

--- a/styles/main.css
+++ b/styles/main.css
@@ -495,6 +495,10 @@ p.indent-paragraphs {
 		margin-right: 0;
 	}
 
+	project-card {
+		width: auto;
+	}
+
 	.sticky {
 		position: static;
 	}
